2007-05-25  Alex Graveley  <alex@beatniksoftware.com>

        Make resizing the X window via the frame work...

	* compzilla/src/compzillaWindow.cpp (WindowConfigured): Take an
	isNotify arg.  Only send the configure DOM event when not a
	notify, or if it's an override window.  Only reset the pixmap if
	it is a notify, and the sizes have changed.  Don't call
	UpdateAttributes, but just update mAttr directly, and only if it's
	a notify.

	* compzilla/src/compzillaControl.cpp (Filter): Pass false for
	isNotify to WindowConfigured for ConfigureRequest events.  Pass
	true for ConfigureRequest.

	* compzilla/chrome/content/frame.js: (configure handler): call
	frame.moveResizeToContent, instead of moveResize to attempt to
	move the frame to the correct location relative to the window.
	(frameDragMouseMoveListener): switch on operation without
	the "-resize" appended, this was dumb.	

	* compzilla/chrome/content/start.js: Ditto, but it's broken for
	the initial case for some reason, the frame still offsets the
	window.

2007-05-24  Chris Toshok  <toshok@ximian.com>

	* compzilla/chrome/content/frame.js,
	compzilla/chrome/content/content.js: incomplete but functional
	first pass at moving all the nativeWindow stuff into content.js
	from frame.js.  the big holdouts left are
	_connectNativeWindowListeners and some initialization stuff in
	CompzillaFrame ().

	content objects now have the following methods they can implement:
	ondestroy, onmoveresize, onhide, onshow, onmaximize, onfullscreen.
	These get called when the relevant frame method is called.

2007-05-24  Chris Toshok  <toshok@ximian.com>

	* compzilla/src/compzillaWindow.cpp (GetCardinalListProperty):
	useful function for dealing with properties that are n-Cardinals,
	like STRUT/STRUT_PARTIAL/ICON_GEOMETRY).
	(GetProperty): make use of GetCardinalListProperty, and implement
	the STRUT stuff.

	* compzilla/src/compzillaWindow.h (class compzillaWindow ):
	prototype for GetCardinalListProperty.
