@@ -1,3 +1,12 @@
+2007-05-26  Alex Graveley  <alex@beatniksoftware.com>
+
+	* compzilla/chrome/content/frame.js: Call windowStack.moveToTop on map.
+
+	* compzilla/chrome/content/minimize.js: Use w.content.XProps.
+
+	* compzilla/chrome/content/content.js: Add
+	Atoms._NET_WM_ICON_GEOMETRY to XProps.
+
 2007-05-25  Alex Graveley  <alex@beatniksoftware.com>
 
         Make resizing the X window via the frame work...
